--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "nodejs_tutorial",
   "version": "1.0.0",
   "description": "NodeJS_tutorial",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/index.js",
+    "watch": "sass --watch src/resources/scss/:src/public/css"
   },
   "repository": {
     "type": "git",
@@ -23,6 +25,12 @@
   },
   "homepage": "https://github.com/VuVietAnh2309/Node_blog#readme",
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "express-handlebars": "^8.0.1"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.7",
+    "sass": "^1.82.0"
   }
 }
